--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -43,8 +43,8 @@
                                         <th>Name</th>
                                         <th>Phone</th>
                                         <th>Address</th>
-                                        <th>Assign To</th>
-                                        <th>Amount</th>
+                                        <th>First name</th>
+                                        <th>Last name</th>
                                         <th>Zip</th>
                                         <th>Delivery Date</th>
                                         <th>Order Status</th>
@@ -58,8 +58,8 @@
                                         <td data-toggle="popover" title="Details" data-content="<%= order.order_details %>" data-placement="top"><%= order.customer.customer_name %></td>
                                         <td><%= order.customer.customer_phone %></td>
                                         <td><%= order.customer.customer_address %></td>
-                                        <td><%= order.staff.staff_name %></td>
-                                        <td data-toggle="popover" title="Paid" data-content="<%= order.order_paid %>" data-placement="top"><%= order.order_amount %></td>
+                                        <td><%= order.firs_name %></td>
+                                        <td data-toggle="popover" title="Paid" data-content="<%= order.order_paid %>" data-placement="top"><%= order.last_name %></td>
                                         <td><%= order.zip %></td>
                                         <td><%= order.delivery_date %></td>
                                         <% if order.order_status == 'Confirm'  %>
