--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -58,7 +58,7 @@
                                         <td data-toggle="popover" title="Details" data-content="<%= order.order_details %>" data-placement="top"><%= order.customer.customer_name %></td>
                                         <td><%= order.address %></td>
                                         <td><%= order.customer.customer_address %></td>
-                                        <td><%= order.firs_name %></td>
+                                        <td><%= order.first_name %></td>
                                         <td data-toggle="popover" title="Paid" data-content="<%= order.order_paid %>" data-placement="top"><%= order.last_name %></td>
                                         <td><%= order.zip %></td>
                                         <td><%= order.delivery_date %></td>
