--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -41,8 +41,8 @@
                                     <tr>
                                         <th>ID</th>
                                         <th>Name</th>
-                                        <th>Phone</th>
                                         <th>Address</th>
+                                        <th>C Address</th>
                                         <th>First name</th>
                                         <th>Amount</th>
                                         <th>Zip</th>
@@ -56,7 +56,7 @@
                                     <tr>
                                         <td>O-<%= order.id %></td>
                                         <td data-toggle="popover" title="Details" data-content="<%= order.order_details %>" data-placement="top"><%= order.customer.customer_name %></td>
-                                        <td><%= order.customer.customer_phone %></td>
+                                        <td><%= order.address %></td>
                                         <td><%= order.customer.customer_address %></td>
                                         <td><%= order.first_name %></td>
                                         <td data-toggle="popover" title="Paid" data-content="<%= order.order_paid %>" data-placement="top"><%= order.order_amount %></td>
