--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -34,7 +34,7 @@
                                             <button type="button" data-toggle="block-option" data-action="content_toggle"><i class="si si-arrow-up"></i></button>
                                         </li>
                                     </ul>
-                                    <h3 class="block-title">Order Form <small>Requierd</small></h3>
+                                    <h3 class="block-title">Order Form <small>Required</small></h3>
                                 </div>
                                 <div class="block-content block-content-narrow">
                                     <div class="row">
@@ -54,6 +54,14 @@
                                                         <%= f.select :staff_id, options, {:include_blank => false}, {:class=>'form-control select_list', :style=>"width:100%"}  %>
                                                     </div>
                                                 </div>  
+                                                <div class="form-group">
+                                                    <label class="col-xs-12" for="example-password-input">Upload image</label>
+                                                    <div class="col-sm-12"> 
+                                                        <%= f.file_field :image %>
+                                                        
+                                                    </div>
+                                                </div>  
+ 
                                                 <div class="form-group">
                                                     <label class="col-xs-12" for="example-password-input">Delivery Date</label>
                                                     <div class="col-sm-12">                                            
