--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -1,31 +1,71 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Guests</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Gender</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @guests.each do |guest| %>
-      <tr>
-        <td><%= guest.first_name %></td>
-        <td><%= guest.last_name %></td>
-        <td><%= guest.gender %></td>
-        <td><%= link_to 'Show', guest %></td>
-        <td><%= link_to 'Edit', edit_guest_path(guest) %></td>
-        <td><%= link_to 'Destroy', guest, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<!-- Page Header -->
+<div class="content bg-gray-lighter">
+    <div class="row items-push">
+        <div class="col-sm-7">
+            <h1 class="page-heading animated zoomIn">
+                Exclusive Guestlist
+            </h1>
+        </div>
+        <div class="col-sm-5 text-right hidden-xs">
+            <ol class="breadcrumb push-10-t">
+                <li>Dashboard</li>
+                <li><a class="link-effect" href="">Guest</a></li>
+            </ol>
+        </div>
+    </div>
+</div>
+<!-- END Page Header -->
 
-<br>
+<!-- Page Content -->
+<div class="content">
+    <!-- Dynamic Table Simple -->
+    <div class="block">
+        <div class="block-header">
+            <ul class="block-options">
+                <li>
+                    <button type="button" data-toggle="block-option" data-action="fullscreen_toggle"><i class="si si-size-fullscreen"></i></button>
+                </li>
+                <li>
+                    <button type="button" data-toggle="block-option" data-action="content_toggle"><i class="si si-arrow-up"></i></button>
+                </li>
+            </ul>
+            <h3 class="block-title">Guelistst</h3>
+        </div>
+        <div class="block-content table-responsive">
+            <table class="table table-striped js-dataTable-full-pagination">
+                
 
-<%= link_to 'New Guest', new_guest_path %>
+              <table>
+                <thead>
+                  <tr>
+                    <th>First name</th>
+                    <th>Last name</th>
+                    <th>Gender</th>
+                    <th colspan="3"></th>
+                  </tr>
+                </thead>
+
+                <tbody>
+                  <% @guests.each do |guest| %>
+                    <tr>
+                      <td><%= guest.first_name %></td>
+                      <td><%= guest.last_name %></td>
+                      <td><%= guest.gender %></td>
+                    </tr>
+                  <% end %>
+                </tbody>
+              </table>
+
+              <br>
+
+              <%= link_to 'New Guest', new_guest_path %>
+            </table>
+        </div>
+    </div> 
+</div>
+<!-- END Page Content -->
+
