--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -12,7 +12,7 @@
                         </div>
                         <div class="col-sm-5 text-right hidden-xs">
                             <ol class="breadcrumb push-10-t">
-                                <li>Dashbord</li>
+                                <li>Dashboard</li>
                                 <li><a class="link-effect" href="">Order</a></li>
                             </ol>
                         </div>
