--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -33,7 +33,7 @@
                     <button type="button" data-toggle="block-option" data-action="content_toggle"><i class="si si-arrow-up"></i></button>
                 </li>
             </ul>
-            <h3 class="block-title">Guelistst</h3>
+            <h3 class="block-title">Guestlist</h3>
         </div>
         <div class="block-content table-responsive">
             <table class="table table-striped js-dataTable-full-pagination">
@@ -45,7 +45,9 @@
                     <th>First name</th>
                     <th>Last name</th>
                     <th>Gender</th>
-                    <th colspan="3"></th>
+                    <th>messengeruserid</th>
+                    <th>chatfueluserid</th>
+                    <th colspan="5"></th>
                   </tr>
                 </thead>
 
@@ -55,6 +57,8 @@
                       <td><%= guest.first_name %></td>
                       <td><%= guest.last_name %></td>
                       <td><%= guest.gender %></td>
+                      <td><%= guest.messengeruserid %></td>
+                      <td><%= guest.chatfueluserid %></td>
                     </tr>
                   <% end %>
                 </tbody>
