--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,13 +7,13 @@
     <div class="row items-push">
         <div class="col-sm-7">
             <h1 class="page-heading animated zoomIn">
-                Exclusive Guestlist
+                Events
             </h1>
         </div>
         <div class="col-sm-5 text-right hidden-xs">
             <ol class="breadcrumb push-10-t">
                 <li>Dashboard</li>
-                <li><a class="link-effect" href="">Guest</a></li>
+                <li><a class="link-effect" href="">Events</a></li>
             </ol>
         </div>
     </div>
@@ -33,7 +33,7 @@
                     <button type="button" data-toggle="block-option" data-action="content_toggle"><i class="si si-arrow-up"></i></button>
                 </li>
             </ul>
-            <h3 class="block-title">Guestlist</h3>
+            <h3 class="block-title">Events</h3>
         </div>
         <div class="block-content table-responsive">
             <table class="table table-striped js-dataTable-full-pagination">
@@ -42,19 +42,18 @@
               <table>
                 <thead>
                   <tr>
-                    <th>First name</th>
-                    <th>Last name</th>
-                    <th>Gender</th>
+                    <th>Title</th>
+                    <th>Date</th>
                     <th colspan="3"></th>
                   </tr>
                 </thead>
 
                 <tbody>
-                  <% @guests.each do |guest| %>
+                  <% @events.each do |event| %>
                     <tr>
-                      <td><%= guest.first_name %></td>
-                      <td><%= guest.last_name %></td>
-                      <td><%= guest.gender %></td>
+                      <td><%= event.title %></td>
+                      <td><%= event.date %></td>
+                      <td><%= link_to 'View', event_path(event.id), :class=>'btn btn-xs btn-default' %></td>
                     </tr>
                   <% end %>
                 </tbody>
@@ -62,7 +61,7 @@
 
               <br>
 
-              <%= link_to 'New Guest', new_guest_path %>
+              <%= link_to 'New Event', new_event_path %>
             </table>
         </div>
     </div> 
