--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,11 @@
 <p id="notice"><%= notice %></p>
 
+<%= link_to 'Edit', edit_event_path(@event) %> |
+<%= link_to 'Back', events_path %>
+
+
+<p id="notice"><%= notice %></p>
+
 
 
 <!-- Page Header -->
@@ -7,7 +13,8 @@
     <div class="row items-push">
         <div class="col-sm-7">
             <h1 class="page-heading animated zoomIn">
-                Exclusive Guestlist
+                <td><%= @event.title %></td>
+                <td><%= @event.date %></td>
             </h1>
         </div>
         <div class="col-sm-5 text-right hidden-xs">
@@ -50,13 +57,11 @@
                 </thead>
 
                 <tbody>
-                  <% @guests.each do |guest| %>
                     <tr>
-                      <td><%= guest.first_name %></td>
-                      <td><%= guest.last_name %></td>
-                      <td><%= guest.gender %></td>
+                      <td><%= @event.guest.first_name %></td>
+                      <td><%= @event.guest.last_name %></td>
+                      <td><%= @event.guest.gender %></td>
                     </tr>
-                  <% end %>
                 </tbody>
               </table>
 
