--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,10 @@
     <head>
         <meta charset="utf-8">
 
-        <title><%= yield(:title) %> | ROSE TMS</title>
+        <title><%= yield(:title) %> | Messenger Chatbot</title>
 
-        <meta name="description" content="Tailor Management System">
-        <meta name="author" content="MD INZAMUL HAQUE">
+        <meta name="description" content="Messenger Chatbot">
+        <meta name="author" content="Jonas Preisler">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
         <!-- Page JS Plugins CSS -->
@@ -292,12 +292,12 @@
                             <%= image_tag 'rose-logo-min.png' %><span class="m-title">ROSE</span>
                         </a>
                     </div>
-                    <p class="font-size-20 dtext">A simple Tailor Shop Management System.</p>
+                    <p class="font-size-20 dtext">Get a Chatbot For Your Business</p>
                 </div>
                 <div class="page-login-main">
                     <div class="brand visible-xs">
                         <a class="h3 text-white" href="index.html">
-                            <%= image_tag 'rose-logo-min.png' %><span class="m-title">ROSE</span>
+                            <%= image_tag 'rose-logo-min.png' %><span class="m-title">Messenger Chatbots</span>
                         </a>
                     </div>
 
