--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -45,7 +45,7 @@
         <div class="block-content table-responsive">
             <table class="table table-striped js-dataTable-full-pagination">
                 
-            <th><%= @event.guest.first_name if @event.guest? %></th>
+                      <td><%= @event.guest.first_name if @event.guest? %></td>
 
               <br>
 
