--- a/app/views/guestlists/index.html.erb
+++ b/app/views/guestlists/index.html.erb
@@ -13,7 +13,7 @@
   <tbody>
     <% @guestlists.each do |guestlist| %>
       <tr>
-        <td><%= guestlist.title %></td>
+        <td><%= 'guestlist' %></td>
         <td><%= link_to 'Show', guestlist %></td>
         <td><%= link_to 'Edit', edit_guestlist_path(guestlist) %></td>
         <td><%= link_to 'Destroy', guestlist, method: :delete, data: { confirm: 'Are you sure?' } %></td>
