--- a/app/views/guests/_form.html.erb
+++ b/app/views/guests/_form.html.erb
@@ -27,7 +27,7 @@
   </div>
 
   <div class="col-sm-10">
-    <%= f.select :guestlist_id,  Guestlist.all.map{ |m| [m.title,m.id]}, {}, placeholder: "Select guestlist", class: "form-control" %>
+    <%= f.select :guestlist_id, Guestlist.all.map{ |m| [m.id]}, {}, placeholder: "Select guestlist", class: "form-control" %>
   </div>
 
   <div class="actions">
