--- a/app/views/guestlists/show.html.erb
+++ b/app/views/guestlists/show.html.erb
@@ -1,22 +1,48 @@
 <p id="notice"><%= notice %></p>
 
-<% @guests.each do |guest| %>
+<div class="content">
+    <!-- Dynamic Table Simple -->
+    <div class="block">
+        <div class="block-header">
+            <ul class="block-options">
+                <li>
+                    <button type="button" data-toggle="block-option" data-action="fullscreen_toggle"><i class="si si-size-fullscreen"></i></button>
+                </li>
+                <li>
+                    <button type="button" data-toggle="block-option" data-action="content_toggle"><i class="si si-arrow-up"></i></button>
+                </li>
+            </ul>
+            <h3 class="block-title">Guestlist</h3>
+        </div>
+        <div class="block-content table-responsive">
+            <table class="table table-striped js-dataTable-full-pagination">
+                
 
-  <p>
-    <strong>First name:</strong>
-    <%= guest.first_name if @guestlist.guest? %>
-  </p>
+              <table>
+                <thead>
+                  <tr>
+                    <th>First name</th>
+                    <th>Last name</th>
+                    <th>Gender</th>
+                    <th colspan="3"></th>
+                  </tr>
+                </thead>
 
-  <p>
-    <strong>Last name:</strong>
-    <%= guest.last_name if @guestlist.guest? %>
-  </p>
+                <tbody>
+                  <% @guests.each do |guests| %>
+                    <tr>
+                      <td><%= guests.first_name %></td>
+                      <td><%= guests.last_name %></td>
+                      <td><%= guests.gender %></td>
+                    </tr>
+                  <% end %>
+                </tbody>
+              </table>
 
-  <p>
-    <strong>Gender:</strong>
-    <%= guest.gender if @guestlist.guest? %>
-  </p>
+              <br>
 
-  <%= link_to 'Edit', edit_guestlist_path(@guestlist) %> |
-  <%= link_to 'Back', guestlists_path %>
-<% end %>
+            </table>
+        </div>
+    </div> 
+</div>
+
