--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -182,7 +182,7 @@
             <!-- Footer -->
             <footer id="page-footer" class="content-mini content-mini-full font-s12 bg-gray-lighter clearfix">
                 <div class="pull-right">
-                    <i class="fa fa-heart text-city"></i> by <a class="font-w600" href="http://facebook.com/inzamul36" target="_blank"> Jonas Preisler</a>
+                    <i class="fa fa-heart text-city"></i> by <a class="font-w600" href="https://facebook.com/digitalspartanpage" target="_blank"> Jonas Preisler</a>
                 </div>
                 <div class="pull-left">
                     <a class="font-w600" href="" target="_blank">Messenger Chatbots</a> &copy; <span><%= Time.current.year %></span>
