--- a/app/views/guests/_form.html.erb
+++ b/app/views/guests/_form.html.erb
@@ -26,6 +26,10 @@
     <%= f.text_field :gender %>
   </div>
 
+  <div class="col-sm-10">
+    <%= f.select :guestlist_id, Guestlist.all.map{ |m| [m.id]}, {}, placeholder: "Select guestlist", class: "form-control" %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
