--- a/app/views/guestlists/_form.html.erb
+++ b/app/views/guestlists/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="col-sm-10">
-    <%= f.label :Event: %>
+    <%= f.label :event %>
     <%= f.select :event_id,  Event.all.map{ |m| [m.title,m.id]}, {}, placeholder: "Select event", class: "form-control" %>
   </div>
 
