--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -45,6 +45,7 @@
                     <th>First name</th>
                     <th>Last name</th>
                     <th>Gender</th>
+                    <th>Guestlists</th>
                     <th colspan="3"></th>
                   </tr>
                 </thead>
@@ -55,6 +56,7 @@
                       <td><%= guest.first_name %></td>
                       <td><%= guest.last_name %></td>
                       <td><%= guest.gender %></td>
+                      <td>+<%= @guestlist %></td>
                     </tr>
                   <% end %>
                 </tbody>
