--- a/app/views/guests/_form.html.erb
+++ b/app/views/guests/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="col-sm-10">
     <%= f.label :guestlist %>
-    <%= f.select :guestlist_id, Guestlist.all.map{ |m| [m.id]}, {}, placeholder: "Select guestlist", class: "form-control" %>
+    <%= f.select (:guestlist_id), Guestlist.all.map{ |m| [m.id]}, {}, placeholder: "Select guestlist", class: "form-control" %>
   </div>
 
   <div class="actions">
