--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -40,7 +40,7 @@
                     <button type="button" data-toggle="block-option" data-action="content_toggle"><i class="si si-arrow-up"></i></button>
                 </li>
             </ul>
-            <h3 class="block-title">Guestlist</h3>
+            <h3 class="block-title">Guestlists</h3>
         </div>
         <div class="block-content table-responsive">
             <table class="table table-striped js-dataTable-full-pagination">
@@ -48,8 +48,8 @@
                 <% @guestlists.each do |guestlists| %>
 
                   <p>
-                    <strong>ID:</strong>
-                    <%= link_to 'View Guestlist', guestlists %>
+                    <strong>List:</strong>
+                    <%= link_to guestlists.id, guestlists %> (<%= guestlists.guests.count %>)
                   </p>
                 <% end %>
               <br>
