--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,13 +86,13 @@
                                     </ul>
                                 </li>   
                                 <li>
-                                    <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-wallet"></i><span class="sidebar-mini-hide">PROMOTERS</span></a>
+                                    <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-wallet"></i><span class="sidebar-mini-hide">AMBASSADORS</span></a>
                                     <ul>
                                         <li>
-                                            <%= link_to 'Add Promoter', new_promoter_path %>
+                                            <%= link_to 'Add Ambassador', new_ambassador_path %>
                                         </li>
                                         <li>
-                                            <%= link_to 'All Promoters', promoters_path %>
+                                            <%= link_to 'All Ambassador', ambassadors_path %>
                                         </li>                                        
                                     </ul>
                                 </li> 
