--- a/app/views/guests/_form.html.erb
+++ b/app/views/guests/_form.html.erb
@@ -31,6 +31,11 @@
     <%= f.select :guestlist_id, Guestlist.all.map{ |m| [m.id]}, {}, placeholder: "Select guestlist", class: "form-control" %>
   </div>
 
+  <div class="col-sm-10">
+    <%= f.label :ambassador %>
+    <%= f.select :ambassador_id, Ambassador.all.map{ |m| [m.name, m.id]}, {}, placeholder: "Select ambassador", class: "form-control" %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
