--- a/app/views/guestlists/_form.html.erb
+++ b/app/views/guestlists/_form.html.erb
@@ -16,6 +16,11 @@
     <%= f.select :event_id,  Event.all.map{ |m| [m.title,m.id]}, {}, placeholder: "Select event", class: "form-control" %>
   </div>
 
+  <div class="col-sm-10">
+    <%= f.label :ambassador %>
+    <%= f.select :ambassador_id, Ambassador.all.map{ |m| [m.name,m.id]}, {}, placeholder: "Select ambassador", class: "form-control" %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
