--- a/app/views/guestlists/show.html.erb
+++ b/app/views/guestlists/show.html.erb
@@ -24,6 +24,7 @@
                     <th>First name</th>
                     <th>Last name</th>
                     <th>Gender</th>
+                    <th>Ambassador</th>
                     <th colspan="3"></th>
                   </tr>
                 </thead>
@@ -34,6 +35,7 @@
                       <td><%= guests.first_name %></td>
                       <td><%= guests.last_name %></td>
                       <td><%= guests.gender %></td>
+                      <td><%= guests.ambassador.name %></td>
                     </tr>
                   <% end %>
                 </tbody>
