--- a/app/views/guestlists/index.html.erb
+++ b/app/views/guestlists/index.html.erb
@@ -25,16 +25,17 @@
                   <tr>
                     <th>Ambassador:</th>
                     <th>Event:</th>
+                    <th>Date:</th>
                     <th colspan="3"></th>
-                  </tr>
                 </thead>
 
                 <tbody>
                   <% @guestlists.each do |guestlist| %>
                     <tr>
-                      <td><%= guestlist.ambassador.name if guestlist.ambassador %> (<%= guestlist.guests.count %>)</td>
+                      <td><%= link_to guestlist.ambassador.name, guestlist_path(guestlist.id) if guestlist.ambassador %> (<%= guestlist.guests.count %>)</td>  
+                      <td><%= guestlist.event.title %></td>
+                      <td><%= guestlist.event.date %></td>
                       <td><%= link_to 'Edit', edit_guestlist_path(guestlist), :class=>'btn btn-xs btn-default' %></td>
-                      <td><%= link_to 'View', guestlist_path(guestlist.id), :class=>'btn btn-xs btn-default' %></td>
                       <td><%= link_to 'Delete', guestlist, method: :delete, data: { confirm: 'Are you sure?' }, :class=>'btn btn-xs btn-default' %></td>
                     </tr>
                   <% end %>
