--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -49,7 +49,7 @@
 
                   <p>
                     <strong>List:</strong>
-                    <%= link_to guestlists.ambassador.name, guestlists %> (<%= guestlists.guests.count %>)
+                    <%= link_to guestlists.ambassador.name, guestlists if guestlists.ambassador %> (<%= guestlists.guests.count %>)
                   </p>
                 <% end %>
               <br>
