ambassadors total dashboard

--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -31,9 +31,9 @@
                             <a class="h2 font-w300 text-primary animated flipInX" href="">+<%= @guestlists %></a>
                         </div>
                         <div class="col-xs-6 col-sm-3">
-                            <div class="font-w700 text-gray-darker animated fadeIn">Promoters</div>
+                            <div class="font-w700 text-gray-darker animated fadeIn">ambassadors</div>
                             <div class="text-muted animated fadeIn"><small><i class="si si-users"></i> Total</small></div>
-                            <a class="h2 font-w300 text-primary animated flipInX" href="">+<%= @promoters %></a>
+                            <a class="h2 font-w300 text-primary animated flipInX" href="">+<%= @ambassadors %></a>
                         </div>
                     </div>
                 </div>
